--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,8 @@
 body
 { 
-    color: #333
-    text-align: left;
+    background: #1e1f24;
+    color: #333;
+    text-align: center;
     font-family: "Arial";
     font-size: 16px;
     margin: 0;
@@ -10,10 +11,11 @@ body
 
 #cabecera
 {
-    background: #33A;
+    background: #37488b;
     box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
     color: white;
     font-weight: bold;
+    font-size: 2em;
     margin: 0;
     padding: 0.5em;
 }
@@ -22,11 +24,11 @@ body
 {
     padding: 0 0 0 1em;
     font-weight: normal;
-    font-size: 0.8em;
+    font-size: 0.6em;
 }
 #container
 {
-    width: 70%;
+    width: 65%;
     padding: 1em;
     text-align: left;
     border: 1px solid #DDD;
@@ -35,4 +37,18 @@ body
 #container h1
 {
     font-size: 20px;
+}
+#post
+{
+    background: white;
+    padding: 1em;
+}
+
+#post #logo
+{
+    padding: 10px;
+    margin: 10px;
+    border: 2px solid black;
+    float: center;
+    width: 400px;
 }
