--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,7 @@ body
 { 
     background: #1e1f24;
     color: #333;
-    text-align: center;
+    text-align: left;
     font-family: "Arial";
     font-size: 16px;
     margin: 0;
@@ -50,5 +50,5 @@ body
     margin: 10px;
     border: 2px solid black;
     float: center;
-    width: 400px;
+    width: 450px;
 }
