--- a/css/estilos.css
+++ b/css/estilos.css
@@ -49,11 +49,13 @@ body
 
 #post #logo
 {
-    padding: 10px;
-    margin: 10px;
+    padding: 5px;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-block-end: 15px;
     border: 2px solid black;
     float: center;
-    width: 400px;
+    width: 85%;
 }
 
 #footer
@@ -62,4 +64,10 @@ body
     color: white;
     text-align: center;
     padding: 0.5em;
+}
+#ua
+{
+    padding: 10px;
+    margin: 10px;
+    float: center;
 }
